<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|center"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorFontMain"
        android:fontFamily="@font/press_start_2p"
        android:textSize= "40dp"
        android:padding="15dp"
        android:layout_gravity="center"

        />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/cubes"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_title"
        android:textColor="@color/colorFontMain"
        android:fontFamily="@font/press_start_2p"
        android:textSize="25dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:textColor="@color/colorFontMain"
        android:text="@string/instructions_main_1"
        android:padding="10dp"
        android:fontFamily="@font/press_start_2p"
        android:gravity="center"/>
    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:textColor="@color/colorFontMain"
        android:text="@string/instructions_main_2"
        android:padding="10dp"
        android:gravity="center"
        android:fontFamily="@font/press_start_2p"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/button_choose_dice"
        android:textColor="@color/colorFontMain"
        android:background="@color/colorAccent"
        android:text="@string/button_choose_text"/>

</LinearLayout>