<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShakeActivity"
    android:layout_gravity="center|top"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/shake_activity_title"
        android:fontFamily="@font/press_start_2p"
        android:textColor="@color/colorFontMain"
        android:layout_gravity="center"
        android:layout_marginBottom="250dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/shake_null"
        android:fontFamily="@font/press_start_2p"
        android:textColor="@color/colorFontMain"
        android:id="@+id/shake_null"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/shake_active"
        android:fontFamily="@font/press_start_2p"
        android:textColor="@color/colorFontMain"
        android:id="@+id/shake_active"
        android:layout_gravity="center"
        android:layout_marginBottom="200dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/shake_button_text"
        android:background="@color/colorAccent"
        android:fontFamily="@font/press_start_2p"
        android:textColor="@color/colorFontMain"
        android:id="@+id/button_shake"/>



</LinearLayout>